@@ -1,3 +1,8 @@
+2008-12-04  Jason Merrill  <jason@redhat.com>
+
+	PR c++/37906
+	* g++.dg/cpp0x/defaulted6.C: New test.
+
 2008-12-04  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/36509
